--- a/src/sass/common/_core.scss
+++ b/src/sass/common/_core.scss
@@ -1,4 +1,8 @@
-html, body {
-  box-sizing: border-box;
+body {
   font-family: 'Roboto', sans-serif;
+  margin: 0;
+}
+
+* {
+  box-sizing: border-box;
 }
